Fixed naming rebinding and other stuff